--- a/style.css
+++ b/style.css
@@ -15,3 +15,5 @@ Text Domain: olhovivopropaganda.com.br
 @import url('assets/fontawesome/css/fontawesome-all.min.css');
 @import url('assets/css/header.css');
 @import url('assets/css/reset.css');
+/*@import url('assets/css/video.css');*/
+@import url('assets/css/slider.css');
