--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -22,6 +22,43 @@
 	color: #fff;
 	text-transform: uppercase;
 	font-size: 0.5em;
+	margin: 15px 0 -10px 0;
+	font-weight: 800;
+	max-width: 550px;
+}
+
+.slider-play{
+	color: #ffd400;
+	font-size: 3em;
+	cursor: pointer;
+	-webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;  
+}
+
+.slider-play:hover{
+	color: #fff;
+}
+
+.slider-txt-sub{
+	color: #fff;
+	text-transform: uppercase;
+	margin: -10px 0 0 0;
+	font-size: 1em;
+}
+
+
+}
+
+
+/*************************************************************************************************/
+@media(min-width:280px){
+
+
+.slider-txt{
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 0.5em;
 	margin: 20px 0 -10px 0;
 	font-weight: 800;
 	max-width: 550px;
@@ -48,24 +85,65 @@
 }
 
 
+}
+
+
+
+/*************************************************************************************************/
+@media(min-width:480px){
+
+.slider-txt{
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 1.1em;
+	margin: 60px 0 -25px 0;
+	font-weight: 800;
+	max-width: 550px;
+}
+
+
+.slider-play{
+	color: #ffd400;
+	font-size: 5em;
+	cursor: pointer;
+	-webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;  
+}
+
+}
+
 
 
 
 /*************************************************************************************************/
 @media(min-width:960px){
 
-
 .slider-txt{
 	color: #fff;
 	text-transform: uppercase;
 	font-size: 2em;
-	margin: 150px 0 -25px 0;
+	margin: 100px 0 -25px 0;
 	font-weight: 800;
 	max-width: 550px;
 }
 
+
+}
+
+
+
+
+
+/*************************************************************************************************/
+@media(min-width:1200px){
+
+
+.slider-txt{
+	margin: 150px 0 -25px 0;
+}
+
 .slider-play{
-	color: #ffd400;
 	font-size: 6em;
 	cursor: pointer;
 	-webkit-transition: all 0.3s ease;
@@ -86,3 +164,5 @@
 
 
 }
+
+
