--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -1,6 +1,5 @@
 
 /*SOCIAL*/
-
 .social-like{
 	padding: 20px 0;
 	background: #000;
@@ -22,7 +21,6 @@
 
 
 /*QUEM SOMOS*/
-
 .quem-somos{
 	background: #000;
 	padding: 10px 0 10px 0;
@@ -55,13 +53,103 @@
 }
 
 
+/*O QUE FAZEMOS*/
+.fazemos{
+	padding: 10px 0;
+}
+
+.fazemos-titu{
+	color: #fff;
+	font-size: 1.5em;
+	font-weight: 800;
+	text-transform: uppercase;
+	margin: 35px 0 10px 0;
+	display: block;
+}
+
+.fazemos-flex{
+	padding: 10px 0;
+}
+
+.fazemos-flex-block{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 20px 0 0 0;
+}
+
+.line{
+	width: 90%;
+	border-bottom: 1px solid #ffd400;
+	padding: 20px 0 0 0;
+}
+
+.fazemos000{
+	background: #ffd400;
+	padding: 30px 0 0 0px;
+	-webkit-border-radius: 50px;
+	border-radius: 50px;
+	width: 100px;
+	height: 100px;	
+	cursor: pointer;
+	-webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;	
+}
+
+.fazemos000:hover{
+	background: #fff;
+}
+
+.fazemos000:hover .fa-tv{
+	color: #ffd400;
+}
+
+.fazemos000:hover .fa-lightbulb{
+	color: #ffd400;
+}
+
+.fazemos000:hover .fa-edit{
+	color: #ffd400;
+}
+
+.fazemos000:hover .fa-globe{
+	color: #ffd400;
+}
+
+.fazemos000:hover .fa-hubspot{
+	color: #ffd400;
+}
+
+.fazemos000:hover .fa-codepen{
+	color: #ffd400;
+}
+
+.fa-tv, .fa-lightbulb, .fa-edit, .fa-globe, .fa-hubspot, .fa-codepen{
+	color: #000;
+	font-size: 2.5em;
+}
+
+.fazemos001{
+	color: #fff;
+	font-weight: 600;
+	font-size: 1.1em;
+	padding: 10px 0;
+}
+
+.fazemos002{
+	color: #fff;
+	font-weight: 300;
+	font-size: 0.9em;
+	padding: 10px 0;
+	width: 90%;
+}
 
 
 /*************************************************************************************************/
 @media(min-width:960px){
 
 /*QUEM SOMOS*/
-
 .quem-somos-titu{
 	text-transform: uppercase;
 	color: #fff;
@@ -79,6 +167,42 @@
 
 .quem-somos-tag{
 	font-size: 3.5em;
+}
+
+
+
+/*O QUE FAZEMOS*/
+.fazemos{
+	padding: 30px 0;
+}
+
+.fazemos-titu{
+	font-size: 2.3em;
+	margin: 50px 0 0 0;
+}
+
+.fazemos-flex{
+	padding: 20px 0;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;	
+}
+
+.fazemos-flex-block{
+	display: flex;
+	flex-direction: column;
+	align-items: center;	
+	margin: 20px 0 0 0;
+	width: 30%;
+	height: 50%;
+}
+
+.line{
+	width: 90%;
+	border-bottom: 1px solid #ffd400;
+	padding: 20px 0 0 0;
 }
 
 
