--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -146,6 +146,155 @@
 }
 
 
+
+
+/*TRABALHOS*/
+.trabalhos-titu{
+	text-transform: uppercase;
+	color: #fff;
+	font-weight: 800;
+	font-size: 1.2em;
+	margin: 10px 0 0 0;
+	display: block;	
+}
+
+.trabalhos-plus{
+	width: 100%;
+	padding: 8px 0 0 0;	
+	border: 2px solid #ffd400;
+	-webkit-border-radius: 50px;
+	border-radius: 50px;
+	width: 60px;
+	height: 60px;
+	cursor: pointer;
+	-webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    margin: 15px auto;
+}
+
+.fa-plus{
+	color: #ffd400;	
+    font-size: 2.5em;  
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;  
+}
+
+.trabalhos-plus:hover .fa-plus{
+	color: #fff;
+}
+
+.trabalhos-plus:hover{
+	border-color: #fff;
+}
+
+
+/*CLIENTES*/
+
+.clientes{
+	background: #fff;
+	padding: 15px 0;
+}
+
+.clientes-titu{
+	width: 100%;
+	font-size: 1.2em;
+	text-align: center;
+	color: #fff;
+	text-transform: uppercase;
+	padding: 10px 0;
+	display: block;
+	font-weight: 700;
+}
+
+
+
+
+
+/*CONTATO*/
+
+.contato{
+	padding: 30px 0;
+}
+
+.contato-titu{
+	text-transform: uppercase;
+	color: #fff;
+	font-weight: 700;
+	font-size: 1.3em;
+	margin: 0 0 15px 0;
+	display: block;
+}
+
+.contato form input{
+	border: 1px solid #ffd400;
+    border-radius: 0;
+    background: none;
+    color: #ffd400;
+}
+
+.form-control::-webkit-input-placeholder { color: white; }  /* WebKit, Blink, Edge */
+.form-control:-moz-placeholder { color: white; }  /* Mozilla Firefox 4 to 18 */
+.form-control::-moz-placeholder { color: white; }  /* Mozilla Firefox 19+ */
+.form-control:-ms-input-placeholder { color: white; }  /* Internet Explorer 10-11 */
+.form-control::-ms-input-placeholder { color: white; }  /* Microsoft Edge */
+
+.contato form textarea{
+	border: 1px solid #ffd400;
+    border-radius: 0;
+    background: none;
+    color: #ffd400;
+}
+
+.btn{
+	background: #ffd400;
+	color: #000;
+	border-radius: 0;
+	text-transform: uppercase;
+}
+
+.btn:hover{
+	background: #fff;
+	color: #ffd400;
+}
+
+.contato-local{
+	color: #ffd400;
+	text-transform: uppercase;
+	font-size: 1.4em;
+	font-weight: 700;
+	display: block;
+	margin: 30px 0 0 0;
+}
+
+.contato-end{
+	font-weight: 300;
+	font-size: 0.9em;
+}
+
+.contato-cont{
+	color: #ffd400;
+	text-transform: uppercase;
+	font-size: 1.4em;
+	font-weight: 700;
+	display: block;
+	margin: 30px 0 0 0;
+}
+
+.contato-fone{
+	font-weight: 300;
+	font-size: 1.7em;
+}
+
+.contato-mail{
+	font-size: 0.5em;
+}
+		
+
+
+
+
 /*************************************************************************************************/
 @media(min-width:960px){
 
@@ -203,6 +352,97 @@
 	width: 90%;
 	border-bottom: 1px solid #ffd400;
 	padding: 20px 0 0 0;
+}
+
+
+
+/*TRABALHOS*/
+.trabalhos-titu{
+	text-transform: uppercase;
+	color: #fff;
+	font-weight: 800;
+	font-size: 2.3em;
+	margin: 0 0 20px 0;
+	display: block;	
+}
+
+
+
+
+/*CLIENTES*/
+
+.clientes{
+	padding: 25px 0;
+}
+
+.clientes-titu{
+
+	font-size: 2.3em;
+
+	padding: 30px 0 20px 0;
+
+}
+
+
+
+
+
+
+/*CONTATO*/
+
+.contato{
+	padding: 50px 0;
+}
+
+.contato-titu{
+	font-size: 2.3em;
+	margin: 0 0 20px 0;
+}
+
+.contato form input{
+    padding: 15px;
+}
+
+.contato form textarea{
+	padding: 15px;
+}
+
+.btn{
+	padding: 10px;
+	display: block;
+	float: right;
+	width: 170px;
+}
+
+
+.contato-local{
+	font-size: 1.9em;
+	margin: 0px 0 10px 0;
+	text-align: left;
+}
+
+.contato-end{
+	font-size: 1.3em;
+	text-align: left;
+	display: block;
+	margin: 0 0 30px 0;
+	font-weight: 300;
+}
+
+.contato-cont{
+	font-size: 1.9em;
+	margin: 0px 0 0 0;
+	text-align: left;
+}
+
+.contato-fone{	
+	font-size: 1.4em;
+	text-align: left;
+	display: block;
+}
+
+.contato-mail{
+	font-size: 0.8em;
 }
 
 
