--- a/style.css
+++ b/style.css
@@ -18,5 +18,4 @@ Text Domain: olhovivopropaganda.com.br
 @import url('assets/css/slider.css');
 @import url('assets/css/content.css');
 @import url('assets/css/normalize.css');
-@import url('assets/hover/images.css');
-@import url('assets/hover/images2.css');
+@import url('assets/css/footer.css');
