--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -1,5 +1,7 @@
 .slider{
 	position: relative;
+	background: #000;
+	padding: 90px 0 0 0;
 }
 
 .slider img{
@@ -22,7 +24,7 @@
 	color: #fff;
 	text-transform: uppercase;
 	font-size: 0.5em;
-	margin: 25px 0 -10px 0;
+	margin: 120px 0 -10px 0;
 	font-weight: 800;
 	max-width: 550px;
 }
